# simple-transforms

./: .gitignore  pyproject.toml  readme.md  setup.py
.github/workflows/: build_wheels.yml
animations/: dim2.ipynb  dim3.ipynb
docs/: api.rst  conf.py  index.rst  primer.rst  usage.rst
src/simple_transforms/: __init__.py  dim2.py  dim3.py  pytrans.c  trans.c
tests/: test_dim2.py  test_dim3.py
